# llm_rust

./: .gitignore  Cargo.toml  checkpoint.safetensors
data/txt/train/: wizard_of_oz.txt  zypt.txt
src/: adamw.rs  bigram.rs  error.rs  generation.rs  gpt.rs  main.rs  main_ttt.rs  model.rs  token.rs  train.rs  train_bak.rs  train_gpu.rs  train_mm.rs  util.rs
src/models/: gpt.rs  llama.rs  mod.rs  yi.rs
src/test/: bigram_test.rs
