[package]
name = "llm_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", features = [
    "metal",
] }
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", features = ["cuda"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.2" }
# candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.3.2" }

rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.53"


[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
