[package]
name = "llm_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", features = [
    "metal",
] }
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", features = ["cuda"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.2" }
chrono = "0.4.31"
num_cpus = "1.16.0"
# candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.3.2" }

rand = "0.8.5"
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.53"
tokenizers = "0.15.0"
walkdir = "2.4.0"
tracing = "0.1.40"
tqdm = "0.6.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"

# [features]
# cuda = ["candle/cuda", "candle-nn/cuda"]
# flash-attn = ["cuda", "dep:candle-flash-attn"]
